Fix z-index on option set for dropdown

--- a/client/src/components/controls/options/OptionSet.css
+++ b/client/src/components/controls/options/OptionSet.css
@@ -7,7 +7,7 @@
     left: -1px;
     /*max-height: 280px;*/
     right: -1px;
-    z-index: 10;
+    z-index: 9;
     overflow-y: auto;
 }
 
